--- a/nw11_hier.Rmd
+++ b/nw11_hier.Rmd
@@ -6,22 +6,25 @@ output: html_document
 ---
 	
 ```{r setup, include=FALSE}
+#| purl: false
 knitr::opts_chunk$set(echo = TRUE)
 ```
 	
 Load required packages
 
 ```{r}
+#| message: false
 library(tidyverse)
 library(stringi)
 library(pomp)
+options(dplyr.summarise.inform=FALSE)
 ```
 	
 Read in data
 
 ```{r}
 read_csv(
-  "../data.csv",
+  "data.csv",
   col_types="iiinnnn"
 ) |>
   mutate(
@@ -71,7 +74,8 @@ stopifnot(!is.na(dat$mouse))
 Get some rough estimates for the individual-level `alpha` and `sigma` parameters.
 
 ```{r}
-read_csv("../po_df_Example9.csv") |>
+#| message: false
+read_csv("po_df_Example9.csv") |>
   mutate(
     mouse=case_when(
       mouse=="01"~"A",
@@ -113,7 +117,8 @@ resids |>
 ```
 
 ```{r}
-read_csv("../coef_df_Example9.csv") |>
+#| message: false
+read_csv("coef_df_Example9.csv") |>
   mutate(
     mouse=case_when(
       mouse=="01"~"A",
@@ -261,7 +266,7 @@ dat |>
 Get starting guesses for trajectories
 ```{r}
 po_df <- read_csv(
-  "../po_df_Example9.csv",
+  "po_df_Example9.csv",
   col_types="nnnnnnnnnncccnnnnnnnnnnn"
 ) |>
   mutate(
@@ -279,6 +284,7 @@ po_df |> pivot_longer(-c(day,mouse)) |>
   mutate(value=exp(value)) |>
   group_by(day,name) |>
   summarise(mean=log(mean(value))) |>
+  ungroup() |>
   pivot_wider(names_from=name,values_from=mean) -> po_avg
 
 po_df |> pivot_longer(-c(day,mouse)) |>
@@ -288,7 +294,6 @@ full_join(po_avg,po_ind,by="day") |>
   ungroup() |>
   select(-day) |>
   t() -> coefs
-
 ```
 
 Create optimisation function
@@ -331,7 +336,9 @@ Run optimisation
 
 ```{r}
 stew(
-  file="nw11_hier.rda",{
+  file="nw11_hier.rda",
+  info=TRUE,
+  {
     po |>
       create_objfun(
         est=c("alphaw","alphan","alphar",
@@ -351,59 +358,32 @@ stew(
       ofun(fit$par)
     })
   })
+```
 
+```{r}
 evalq(coef(object),envir=environment(ofun)) |> melt()
+```
 
+```{r}
+#| warning: false
+#| fig.height: 6
+#| fig.width: 6
 evalq(coefs,envir=environment(ofun)) |>
   melt() |>
   as_tibble() |>
   separate(Var1,into=c("name","mouse")) |>
-  mutate(time=time(po)[Var2]) |>
+  mutate(
+    time=time(po)[Var2],
+    mouse=if_else(is.na(mouse),"GROUP",mouse),
+    value=exp(value)
+    ) |>
   select(-Var2) |>
-  ggplot(aes(x=time,y=value,color=mouse,linewidth=is.na(mouse)))+
+  ggplot(aes(x=time,y=value,color=mouse,linewidth=mouse=="GROUP"))+
   geom_line()+
-  scale_linewidth_manual(values=c(`TRUE`=2,`FALSE`=1))+
-  facet_grid(name~.,scales="free_y")
-
-convergence <- fit$convergence
-min.fit <- fit$value
+  scale_linewidth_manual(guide="none",values=c(`TRUE`=2,`FALSE`=1))+
+  scale_y_log10()+
+  facet_grid(name~.,scales="free_y")+
+  theme_bw()
 ```
 
-Process output
-
-```{r}
-#| eval: false
-
-evalq(object,envir=environment(ofun)) -> po
-
-coef(po) |>
-  as.data.frame() |> 
-  t() |>
-  as_tibble() |>
-  mutate(
-    box="02",
-    paba="0.005",
-    lambdaM=1000,
-    lambdaE=1000,
-    sigmaR=0.75,
-    sigmaW=0.75,
-    sigmaN=0.75,
-    fit=min.fit,
-    con=convergence
-  ) -> coef_df
-
-po |>
-  as_tibble() |>
-  mutate(
-    K=log((exp(R)+exp(E))*(1-exp(-exp(M)/(exp(R)+exp(E))))),
-    box="02",
-    paba="0.005",
-    lambdaM=1000,
-    lambdaE=1000,
-    sigmaR=0.75,
-    sigmaW=0.75,
-    sigmaN=0.75,
-    fit=min.fit,
-    con=convergence
-  ) -> po_df
-```
+The above computation required `r signif(.system.time[3]/3600,3)`&nbsp;CPU&nbsp;hr.
