--- a/final_files/FDA_FullModel_Results.Rmd
+++ b/final_files/FDA_FullModel_Results.Rmd
@@ -123,7 +123,6 @@ po_df |> pivot_wider(names_from=name,values_from=value) |>
   select(Mouse,time,box,pABA,Reticulocytes,`Indiscriminate killing`,
          `Targeted killing`,RBC) |>
   pivot_longer(-c(Mouse,time,box,pABA)) -> po_tmp
-po_tmp$name <- factor(po_tmp$name, )
 
 po_tmp|>
   ggplot(aes(x=time,y=value,color=Mouse,linewidth=Mouse=="Group"))+
@@ -143,15 +142,15 @@ po_tmp|>
 
 ```{r comparison}
 po_df |>
-  filter(Mouse!="Group",name%in%c("logE","logR","logM")) |>
+  filter(Mouse!="Group",name%in%c("Erythrocytes","Reticulocytes","Merozoites")) |>
   pivot_wider(names_from=name,values_from=value) |>
-  mutate(K=(logR+logE)*(1-exp(-logM/(logR+logE))),
-         RBC=logR+logE) |>
-  select(time,Mouse,box,pABA,RBC,Retic=logR,Pd=K,Eryth=logE) |>
+  mutate(Parasites=(Reticulocytes+Erythrocytes)*(1-exp(-Merozoites/(Reticulocytes+Erythrocytes))),
+         RBC=Reticulocytes+Erythrocytes) |>
+  select(time,Mouse,box,pABA,RBC,Reticulocytes,Parasites,Erythrocytes) |>
   unite("ID",c(time,box,Mouse),sep="_",remove=F) -> fits
 
 data_full |>
-  select(time=day,pABA,box,Mouse,Pd,RBC,Retic,Eryth) |>
+  select(time=day,pABA,box,Mouse,Parasites=Pd,RBC,Reticulocytes=Retic,Erythrocytes=Eryth) |>
   unite("ID",c(time,box,Mouse),sep="_",remove=F) -> data
 
 data <- slice(data,which(data$ID%in%fits$ID))
@@ -179,15 +178,15 @@ ggplot()+
 po_df |>
   filter(Mouse=="Group") |>
   pivot_wider(names_from=name,values_from=value) |>
-  mutate(K=(logR+logE)*(1-exp(-logM/(logR+logE))),
-         RBC=logR+logE) |>
-  select(time,Mouse,box,pABA,RBC,E=logE,R=logR,K,N=logN,W=logW) |>
-  pivot_longer(-c(time,Mouse,box,pABA)) -> group.fits
+  mutate(Parasites=(Reticulocytes+Erythrocytes)*(1-exp(-Merozoites/(Reticulocytes+Erythrocytes))),
+         RBC=Reticulocytes+Erythrocytes) |>
+  select(time,Mouse,box,pABA,RBC,Erythrocytes,Reticulocytes,Parasites,`Indiscriminate killing`,`Targeted killing`) |>
+  pivot_longer(-c(time,Mouse,box,pABA)) -> group_fits
 
-group.fits$name <- factor(group.fits$name,levels=c("RBC","E","R","N","W","K"))
+group_fits$name <- factor(group_fits$name,levels=c("RBC","Erythrocytes","Reticulocytes","Indiscriminate killing","Targeted killing","Parasites"))
 
-group.fits |>
-  filter(name%in%c("R","N","W")) |>
+group_fits |>
+  filter(name%in%c("Reticulocytes","Indiscriminate killing","Targeted killing")) |>
   ggplot(aes(x=time,y=value,color=pABA))+
   geom_line(linewidth=2)+
   scale_y_log10()+
@@ -199,11 +198,12 @@ group.fits |>
         panel.grid = element_blank()
         )
 
-group.fits |>
-  filter(pABA!="control",name%in%c("R","N","W")) |>
+group_fits |>
+  filter(name%in%c("Reticulocytes","Erythrocytes")) |>
   ggplot(aes(x=time,y=value,color=pABA))+
   geom_line(linewidth=2)+
   scale_y_log10()+
+  scale_colour_manual(values=cbPalette)+
   xlab("Days")+ylab("Density per microlitre")+
   facet_grid(.~name,scales="free_y")+
   theme_bw()+
@@ -211,44 +211,110 @@ group.fits |>
         panel.grid = element_blank()
         )
 
-group.fits |>
-  filter(name%in%c("R","E")) |>
-  ggplot(aes(x=time,y=value,color=pABA))+
-  geom_line(linewidth=2)+
-  scale_y_log10()+
-  xlab("Days")+ylab("Density per microlitre")+
-  facet_grid(.~name,scales="free_y")+
-  theme_bw()+
-  theme(strip.background=element_blank(),
-        panel.grid = element_blank()
-        )
-
-group.fits |> filter(pABA%in%c("0"),name%in%c("K")) -> tmp
+group_fits |> filter(pABA%in%c("0%"),name%in%c("Parasites")) -> tmp
 peak.day <- tmp$time[which(tmp$value==max(tmp$value))]
 
-group.fits |>
-  filter(pABA%in%c("control","0"),name%in%c("R","E")) |>
+group_fits |>
+  filter(name%in%c("Reticulocytes","Parasites")) |>
   ggplot(aes(x=time,y=value,color=pABA))+
   geom_line(linewidth=2)+
   geom_vline(xintercept=peak.day,linetype="dashed",col="grey")+
   scale_y_log10()+
+  scale_colour_manual(values=cbPalette)+
   xlab("Day")+ylab("Density per microlitre")+
   facet_grid(.~name,scales="free_y")+
   theme_bw()+
   theme(strip.background=element_blank(),
         panel.grid = element_blank()
         )
+```
 
-group.fits |>
-  filter(name%in%c("R","E")) |>
-  ggplot(aes(x=time,y=value,color=pABA))+
-  geom_line(linewidth=1)+
-  geom_vline(xintercept=peak.day,linetype="dashed",col="grey")+
-  scale_y_log10()+
-  xlab("Day")+ylab("Density per microlitre")+
-  facet_grid(.~name,scales="free_y")+
+## Plot swirlies
+
+```{r swirlies}
+po_df |>
+  filter(Mouse=="Group") |>
+  pivot_wider(names_from=name,values_from=value) |>
+  mutate(Parasites=(Reticulocytes+Erythrocytes)*(1-exp(-Merozoites/(Reticulocytes+Erythrocytes))),
+         RBC=Reticulocytes+Erythrocytes) |>
+  select(time,Mouse,box,pABA,RBC,Erythrocytes,Reticulocytes,Parasites,`Indiscriminate killing`,`Targeted killing`) -> swirls
+
+swirls |>
+  ggplot(aes(x=Parasites,y=`Targeted killing`,color=pABA))+
+  geom_path(linewidth=2)+
+  geom_text(aes(label=time),col="black",size=5)+
+  scale_x_log10()+scale_y_log10()+
+  scale_colour_manual(values=cbPalette)+
+  xlab("Parasite density")+ylab("Targeted killing")+
   theme_bw()+
-  theme(strip.background=element_blank(),
+  theme(
         panel.grid = element_blank()
+        )
+
+swirls |>
+  ggplot(aes(x=Reticulocytes,y=`Targeted killing`,color=pABA))+
+  geom_path(linewidth=2)+
+  geom_text(aes(label=time),col="black",size=5)+
+  scale_x_log10()+scale_y_log10()+
+  scale_colour_manual(values=cbPalette)+
+  xlab("Reticulocyte supply")+ylab("Targeted killing")+
+  theme_bw()+
+  theme(
+        panel.grid = element_blank()
+        )
+
+swirls |>
+  ggplot(aes(x=Reticulocytes,y=`Indiscriminate killing`,color=pABA))+
+  geom_path(linewidth=2)+
+  geom_text(aes(label=time),col="black",size=5)+
+  scale_x_log10()+scale_y_log10()+
+  scale_colour_manual(values=cbPalette)+
+  xlab("Reticulocyte supply")+ylab("Indiscriminate killing")+
+  theme_bw()+
+  theme(
+        panel.grid = element_blank()
+        )
+
+swirls |>
+  ggplot(aes(x=`Targeted killing`,y=`Indiscriminate killing`,color=pABA))+
+  geom_path(linewidth=2)+
+  geom_text(aes(label=time),col="black",size=5)+
+  scale_x_log10()+scale_y_log10()+
+  scale_colour_manual(values=cbPalette)+
+  xlab("Targeted killing")+ylab("Indiscriminate killing")+
+  theme_bw()+
+  theme(
+        panel.grid = element_blank()
+        )
+```
+
+## Plot reticulocytes versus erythrocytes
+
+```{r pABA0}
+ggplot()+
+  geom_path(data=swirls,aes(x=Erythrocytes,y=Reticulocytes,color=pABA),linewidth=2)+
+  geom_text(data=swirls,aes(x=Erythrocytes,y=Reticulocytes,label=time),col="black",size=5)+
+  xlab("Erythrocytes")+ylab("Reticulocytes")+
+  theme_bw()+
+  scale_x_log10()+scale_y_log10()+
+  scale_colour_manual(values=cbPalette)+
+  facet_wrap(pABA~.)+
+  theme(
+        panel.grid = element_blank(),
+        legend.position = "none",
+        strip.background = element_blank()
+        )
+
+ggplot()+
+  geom_path(data=swirls,aes(x=Erythrocytes,y=Reticulocytes,color=pABA),linewidth=2)+
+  geom_text(data=swirls,aes(x=Erythrocytes,y=Reticulocytes,label=time),col="black",size=5)+
+  xlab("Erythrocytes")+ylab("Reticulocytes")+
+  theme_bw()+
+  scale_colour_manual(values=cbPalette)+
+  facet_wrap(pABA~.)+
+  theme(
+        panel.grid = element_blank(),
+        legend.position = "none",
+        strip.background = element_blank()
         )
 ```
