--- a/final_files/POMP_GroupLevel.Rmd
+++ b/final_files/POMP_GroupLevel.Rmd
@@ -2,7 +2,9 @@
 title: "POMP group-level results - All boxes"
 author: "Madeline Peters, Aaron King"
 date: "`r Sys.Date()`"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 ```{r setup, include=FALSE}
